@@ -10,10 +10,10 @@ import uk.gov.hmcts.reform.civil.callback.CallbackHandler;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.callback.CaseEvent;
 import uk.gov.hmcts.reform.civil.enums.CaseState;
-import uk.gov.hmcts.reform.civil.enums.MultiPartyScenario;
 import uk.gov.hmcts.reform.civil.model.BusinessProcess;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.querymanagement.CaseMessage;
+import uk.gov.hmcts.reform.civil.model.querymanagement.CaseQueriesCollection;
 import uk.gov.hmcts.reform.civil.service.CoreCaseUserService;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 import uk.gov.hmcts.reform.civil.service.UserService;
@@ -24,6 +24,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
+import static java.util.Objects.nonNull;
 import static uk.gov.hmcts.reform.civil.callback.CallbackParams.Params.BEARER_TOKEN;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_START;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
@@ -34,15 +35,11 @@ import static uk.gov.hmcts.reform.civil.enums.CaseState.CASE_DISMISSED;
 import static uk.gov.hmcts.reform.civil.enums.CaseState.PENDING_CASE_ISSUED;
 import static uk.gov.hmcts.reform.civil.enums.CaseState.PROCEEDS_IN_HERITAGE_SYSTEM;
 import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.assignCategoryIdToAttachments;
+import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.buildCreatedByWithRoleMetadata;
 import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.buildLatestQuery;
 import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.clearOldQueryCollections;
-import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.getLatestQuery;
-import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.getUserQueriesByRole;
 import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.logMigrationSuccess;
 import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.migrateAllQueries;
-import static uk.gov.hmcts.reform.civil.utils.CaseQueriesUtil.updateQueryCollectionPartyName;
-import static uk.gov.hmcts.reform.civil.utils.UserRoleUtils.isLIPClaimant;
-import static uk.gov.hmcts.reform.civil.utils.UserRoleUtils.isLIPDefendant;
 
 @Service
 @RequiredArgsConstructor
@@ -57,14 +54,16 @@ public class RaiseQueryCallbackHandler extends CallbackHandler {
     private final FeatureToggleService featureToggleService;
 
     public static final String INVALID_CASE_STATE_ERROR = "If your case is offline, you cannot raise a query.";
+    public static final String QM_NOT_ALLOWED_ERROR = "The raise a query function is not available on this case. If you have a query, contact the court handling this case.";
+    public static final String FOLLOW_UPS_ERROR = "Consecutive follow up messages are not allowed for query management.";
     public static final String PUBLIC_QUERIES_PARTY_NAME = "All queries";
 
     @Override
     protected Map<String, Callback> callbacks() {
         return Map.of(
             callbackKey(ABOUT_TO_START), this::aboutToStart,
-            callbackKey(ABOUT_TO_SUBMIT), this::setManagementQuery,
-            callbackKey(SUBMITTED), this::aboutToSubmit
+            callbackKey(ABOUT_TO_SUBMIT), this::aboutToSubmit,
+            callbackKey(SUBMITTED), this::submitted
         );
     }
 
@@ -76,8 +75,14 @@ public class RaiseQueryCallbackHandler extends CallbackHandler {
     private CallbackResponse aboutToStart(CallbackParams callbackParams) {
         CaseData caseData = callbackParams.getCaseData();
 
-        List<CaseState> invalidStates = Arrays.asList(PENDING_CASE_ISSUED, CASE_DISMISSED,
-                                                      PROCEEDS_IN_HERITAGE_SYSTEM, CLOSED);
+        if (!featureToggleService.isPublicQueryManagementEnabled(caseData)) {
+            List<String> errors = List.of(QM_NOT_ALLOWED_ERROR);
+            return AboutToStartOrSubmitCallbackResponse.builder()
+                .errors(errors).build();
+        }
+
+        List<CaseState> invalidStates = Arrays.asList(
+            PENDING_CASE_ISSUED, CASE_DISMISSED, PROCEEDS_IN_HERITAGE_SYSTEM, CLOSED);
         if (invalidStates.contains(caseData.getCcdState())) {
             List<String> errors = List.of(INVALID_CASE_STATE_ERROR);
 
@@ -85,58 +90,47 @@ public class RaiseQueryCallbackHandler extends CallbackHandler {
                 .errors(errors).build();
         }
 
-        CaseData.CaseDataBuilder caseDataBuilder = caseData.toBuilder();
-        if (featureToggleService.isPublicQueryManagementEnabled(caseData)) {
-            migrateAllQueries(caseDataBuilder);
-        }
+        migrateAllQueries(caseData);
 
         return AboutToStartOrSubmitCallbackResponse.builder()
-            .data(caseDataBuilder.build().toMap(objectMapper)).build();
-    }
-
-    private CallbackResponse setManagementQuery(CallbackParams callbackParams) {
-        CaseData caseData = callbackParams.getCaseData();
-
-        List<String> roles = retrieveUserCaseRoles(
-            caseData.getCcdCaseReference().toString(),
-            callbackParams.getParams().get(BEARER_TOKEN).toString()
-        );
-
-        boolean isPublicQmEnabled =  featureToggleService.isPublicQueryManagementEnabled(caseData);
-        CaseMessage latestCaseMessage = isPublicQmEnabled
-            ? getLatestQuery(caseData) : getUserQueriesByRole(caseData, roles).latest();
-
-        assignCategoryIdToAttachments(latestCaseMessage, assignCategoryId, roles);
-        CaseData.CaseDataBuilder caseDataBuilder = caseData.toBuilder();
-
-        if (featureToggleService.isPublicQueryManagementEnabled(caseData)) {
-            caseDataBuilder
-                .queries(caseData.getQueries().toBuilder().partyName(PUBLIC_QUERIES_PARTY_NAME).build())
-                .qmLatestQuery(buildLatestQuery(latestCaseMessage, caseData, roles));;
-            clearOldQueryCollections(caseDataBuilder);
-        } else if (!isLIPClaimant(roles) && !isLIPDefendant(roles)) {
-            caseDataBuilder.qmLatestQuery(buildLatestQuery(latestCaseMessage));
-            updateQueryCollectionPartyName(roles, MultiPartyScenario.getMultiPartyScenario(caseData), caseDataBuilder);
-        }
-
-        return AboutToStartOrSubmitCallbackResponse.builder()
-            .data(caseDataBuilder
-                      .businessProcess(BusinessProcess.ready(queryManagementRaiseQuery))
-                      .build().toMap(objectMapper))
-            .build();
+            .data(caseData.toMap(objectMapper)).build();
     }
 
     private CallbackResponse aboutToSubmit(CallbackParams callbackParams) {
-        CaseData caseDataBefore = callbackParams.getCaseDataBefore();
-        if (featureToggleService.isPublicQueryManagementEnabled(caseDataBefore)) {
-            logMigrationSuccess(callbackParams.getCaseDataBefore());
+        CaseData caseData = callbackParams.getCaseData();
+        String userToken = callbackParams.getParams().get(BEARER_TOKEN).toString();
+        UserInfo userInfo = userService.getUserInfo(userToken);
+        List<String> roles = coreCaseUserService.getUserCaseRoles(
+            caseData.getCcdCaseReference().toString(),
+            userInfo.getUid()
+        );
+
+        CaseMessage latestCaseMessage = caseData.getQueries().latest();
+        if (nonNull(caseData.getQueries()) && caseData.getQueries().messageThread(latestCaseMessage).size() % 2 == 0) {
+            return AboutToStartOrSubmitCallbackResponse.builder().errors(List.of(FOLLOW_UPS_ERROR)).build();
         }
-        return emptySubmittedCallbackResponse(callbackParams);
+
+        if (latestCaseMessage != null) {
+            latestCaseMessage.setCreatedBy(buildCreatedByWithRoleMetadata(userInfo.getUid(), roles));
+        }
+
+        assignCategoryIdToAttachments(latestCaseMessage, assignCategoryId, roles);
+
+        CaseQueriesCollection caseQueriesCollection = caseData.getQueries();
+        caseQueriesCollection.setPartyName(PUBLIC_QUERIES_PARTY_NAME);
+        caseData.setQueries(caseQueriesCollection);
+        caseData.setQmLatestQuery(buildLatestQuery(latestCaseMessage, caseData, roles));
+        clearOldQueryCollections(caseData);
+        caseData.setBusinessProcess(BusinessProcess.ready(queryManagementRaiseQuery));
+
+        return AboutToStartOrSubmitCallbackResponse.builder()
+            .data(caseData.toMap(objectMapper))
+            .build();
     }
 
-    private List<String> retrieveUserCaseRoles(String caseReference, String userToken) {
-        UserInfo userInfo = userService.getUserInfo(userToken);
-        return coreCaseUserService.getUserCaseRoles(caseReference, userInfo.getUid());
+    private CallbackResponse submitted(CallbackParams callbackParams) {
+        logMigrationSuccess(callbackParams.getCaseDataBefore());
+        return emptySubmittedCallbackResponse(callbackParams);
     }
 
 }
