@@ -2,6 +2,7 @@ package uk.gov.hmcts.reform.civil.handler.callback.camunda.docmosis;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.camunda.bpm.engine.RuntimeService;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -47,15 +48,15 @@ import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.GEN_NOTICE_OF_DISCONTINUANCE;
-import static uk.gov.hmcts.reform.civil.documentmanagement.model.DocumentType.NOTICE_OF_DISCONTINUANCE;
+import static uk.gov.hmcts.reform.civil.documentmanagement.model.DocumentType.DIRECTIONS_QUESTIONNAIRE;
 
 @ExtendWith(SpringExtension.class)
 @SpringBootTest(classes = {
@@ -87,13 +88,15 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
         @ValueSource(booleans = {true, false})
         void shouldUpdateCamundaVariables_whenInvoked(Boolean toggleState) {
             //Given
+            Organisation organisation = new Organisation();
+            organisation.setOrganisationID("Id");
+            OrganisationPolicy organisationPolicy = new OrganisationPolicy();
+            organisationPolicy.setOrganisation(organisation);
+            BusinessProcess businessProcess = new BusinessProcess();
+            businessProcess.setProcessInstanceId(PROCESS_INSTANCE_ID);
             CaseData caseData = CaseDataBuilder.builder().atStateClaimIssued()
-                .applicant1OrganisationPolicy(OrganisationPolicy.builder()
-                                                  .organisation(Organisation.builder()
-                                                                    .organisationID("Id")
-                                                                    .build())
-                                                  .build())
-                .businessProcess(BusinessProcess.builder().processInstanceId(PROCESS_INSTANCE_ID).build()).build();
+                .applicant1OrganisationPolicy(organisationPolicy)
+                .businessProcess(businessProcess).build();
             caseData.setCourtPermissionNeeded(
                 toggleState ? SettleDiscontinueYesOrNoList.YES : SettleDiscontinueYesOrNoList.NO);
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
@@ -106,18 +109,19 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
 
         @Test
         void shouldGenerateNoticeOfDiscontinueDocForCW_whenCourtPermissionRequired() {
-            when(formGenerator.generateDocs(any(CaseData.class), anyString(), any(Address.class), anyString(), anyString())).thenReturn(getCaseDocument());
+            when(formGenerator.generateDocs(any(CaseData.class), anyString(), any(Address.class), anyString(), anyString(), anyBoolean())).thenReturn(getCaseDocument());
             when(organisationService.findOrganisationById(anyString())).thenReturn(getOrganisation());
 
-            CaseData caseData = CaseDataBuilder.builder().atStateNotificationAcknowledged().build().toBuilder()
-                    .respondent1(getRespondent1PartyDetails())
-                    .applicant1(getApplicant1PartyDetails())
-                    .courtPermissionNeeded(SettleDiscontinueYesOrNoList.YES)
-                .respondent1DQ(Respondent1DQ.builder().build())
-                    .isPermissionGranted(SettleDiscontinueYesOrNoList.YES)
-                    .businessProcess(BusinessProcess.builder().processInstanceId(PROCESS_INSTANCE_ID).build())
-                    .typeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE)
-                    .build();
+            CaseData caseData = CaseDataBuilder.builder().atStateNotificationAcknowledged().build();
+            caseData.setRespondent1(getRespondent1PartyDetails());
+            caseData.setApplicant1(getApplicant1PartyDetails());
+            caseData.setCourtPermissionNeeded(SettleDiscontinueYesOrNoList.YES);
+            caseData.setRespondent1DQ(new Respondent1DQ());
+            caseData.setIsPermissionGranted(SettleDiscontinueYesOrNoList.YES);
+            BusinessProcess businessProcess = new BusinessProcess();
+            businessProcess.setProcessInstanceId(PROCESS_INSTANCE_ID);
+            caseData.setBusinessProcess(businessProcess);
+            caseData.setTypeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE);
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
             params.getRequest().setEventId(GEN_NOTICE_OF_DISCONTINUANCE.name());
 
@@ -129,17 +133,19 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
                                                              Address.fromContactInformation(getOrganisation()
                                                                                                 .get()
                                                                                                 .getContactInformation()
-                                                                                                .get(0)),
+                                                                                                .getFirst()),
                                                              "claimant",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN",
+                                                             false);
                 verify(formGenerator, times(1)).generateDocs(caseData,
                                                              getOrganisation().get().getName(),
                                                              Address.fromContactInformation(getOrganisation()
                                                                                                 .get()
                                                                                                 .getContactInformation()
-                                                                                                .get(0)),
+                                                                                                .getFirst()),
                                                              "defendant",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN",
+                                                             false);
             }
 
             CaseData updatedData = mapper.convertValue(response.getData(), CaseData.class);
@@ -148,29 +154,88 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
         }
 
         @Test
+        void shouldGenerateNoticeOfDiscontinueDocForCW_whenCourtPermissionRequired_1vs2() {
+            when(formGenerator.generateDocs(any(CaseData.class), anyString(), any(Address.class), anyString(), anyString(), anyBoolean()))
+                .thenReturn(getCaseDocument());
+            Optional<uk.gov.hmcts.reform.civil.prd.model.Organisation> organisation = getOrganisationWithoutName();
+            when(organisationService.findOrganisationById(anyString())).thenReturn(organisation);
+
+            CaseData caseData = CaseDataBuilder.builder().atStateNotificationAcknowledged().build();
+            caseData.setRespondent1(getRespondent1PartyDetails());
+            caseData.setRespondent2(getRespondent2PartyDetails());
+            caseData.setApplicant1(getApplicant1PartyDetails());
+            caseData.setAddRespondent2(YesOrNo.YES);
+            caseData.setRespondent2SameLegalRepresentative(YesOrNo.NO);
+            caseData.setCourtPermissionNeeded(SettleDiscontinueYesOrNoList.YES);
+            caseData.setIsPermissionGranted(SettleDiscontinueYesOrNoList.YES);
+            caseData.setTypeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE);
+            StatementOfTruth respondent1StatementOfTruth = new StatementOfTruth();
+            respondent1StatementOfTruth.setName("Signer 2 Name");
+            caseData.setRespondent1DQ(new Respondent1DQ().setRespondent1DQStatementOfTruth(respondent1StatementOfTruth));
+            StatementOfTruth respondent2StatementOfTruth = new StatementOfTruth();
+            respondent2StatementOfTruth.setName("Signer 3 Name");
+            caseData.setRespondent2DQ(new Respondent2DQ().setRespondent2DQStatementOfTruth(respondent2StatementOfTruth));
+            BusinessProcess businessProcess = new BusinessProcess();
+            businessProcess.setProcessInstanceId(PROCESS_INSTANCE_ID);
+            caseData.setBusinessProcess(businessProcess);
+            CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+            params.getRequest().setEventId(GEN_NOTICE_OF_DISCONTINUANCE.name());
+
+            var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
+
+            if (organisation.isPresent()) {
+                Address address = Address.fromContactInformation(organisation.get().getContactInformation().getFirst());
+                verify(formGenerator, times(1)).generateDocs(caseData,
+                                                             "Signer Name",
+                                                             address,
+                                                             "claimant",
+                                                             "BEARER_TOKEN",
+                                                             false);
+                verify(formGenerator, times(1)).generateDocs(caseData,
+                                                             "Signer 2 Name",
+                                                             address,
+                                                             "defendant1",
+                                                             "BEARER_TOKEN",
+                                                             false);
+                verify(formGenerator, times(1)).generateDocs(caseData,
+                                                             "Signer 3 Name",
+                                                             address,
+                                                             "defendant2",
+                                                             "BEARER_TOKEN",
+                                                             false);
+            }
+
+            CaseData updatedData = mapper.convertValue(response.getData(), CaseData.class);
+            assertThat(updatedData.getApplicant1NoticeOfDiscontinueCWViewDoc()).isNotNull();
+            assertThat(updatedData.getRespondent1NoticeOfDiscontinueCWViewDoc()).isNotNull();
+            assertThat(updatedData.getRespondent2NoticeOfDiscontinueCWViewDoc()).isNotNull();
+        }
+
+        @Test
         void shouldGenerateNoticeOfDiscontinueDocForAllParties_whenNoCourtPermissionRequired_1vs2() {
-            when(formGenerator.generateDocs(any(CaseData.class), anyString(), any(Address.class), anyString(), anyString())).thenReturn(getCaseDocument());
+            when(formGenerator.generateDocs(any(CaseData.class), anyString(), any(Address.class), anyString(), anyString(), anyBoolean())).thenReturn(getCaseDocument());
             when(organisationService.findOrganisationById(anyString())).thenReturn(getOrganisationWithoutName());
 
-            CaseData caseData = CaseDataBuilder.builder().atStateNotificationAcknowledged().build().toBuilder()
-                    .respondent1(getRespondent1PartyDetails())
-                .respondent1DQ(Respondent1DQ.builder()
-                                   .respondent1DQStatementOfTruth(StatementOfTruth.builder()
-                                                                      .name("Signer 2 Name")
-                                                                      .build())
-                                   .build())
-                .respondent2DQ(Respondent2DQ.builder()
-                                   .respondent2DQStatementOfTruth(StatementOfTruth.builder()
-                                                                      .name("Signer 3 Name")
-                                                                      .build())
-                                   .build())
-                .addRespondent2(YesOrNo.YES)
-                .respondent2SameLegalRepresentative(YesOrNo.NO)
-                    .applicant1(getApplicant1PartyDetails())
-                    .courtPermissionNeeded(SettleDiscontinueYesOrNoList.NO)
-                    .typeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE)
-                    .businessProcess(BusinessProcess.builder().processInstanceId(PROCESS_INSTANCE_ID).build())
-                    .build();
+            CaseData caseData = CaseDataBuilder.builder().atStateNotificationAcknowledged().build();
+            caseData.setRespondent1(getRespondent1PartyDetails());
+            StatementOfTruth statementOfTruth = new StatementOfTruth();
+            statementOfTruth.setName("Signer 2 Name");
+            Respondent1DQ respondent1DQ = new Respondent1DQ();
+            respondent1DQ.setRespondent1DQStatementOfTruth(statementOfTruth);
+            caseData.setRespondent1DQ(respondent1DQ);
+            StatementOfTruth statementOfTruth1 = new StatementOfTruth();
+            statementOfTruth1.setName("Signer 3 Name");
+            Respondent2DQ respondent2DQ = new Respondent2DQ();
+            respondent2DQ.setRespondent2DQStatementOfTruth(statementOfTruth1);
+            caseData.setRespondent2DQ(respondent2DQ);
+            caseData.setAddRespondent2(YesOrNo.YES);
+            caseData.setRespondent2SameLegalRepresentative(YesOrNo.NO);
+            caseData.setApplicant1(getApplicant1PartyDetails());
+            caseData.setCourtPermissionNeeded(SettleDiscontinueYesOrNoList.NO);
+            caseData.setTypeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE);
+            BusinessProcess businessProcess = new BusinessProcess();
+            businessProcess.setProcessInstanceId(PROCESS_INSTANCE_ID);
+            caseData.setBusinessProcess(businessProcess);
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
             params.getRequest().setEventId(GEN_NOTICE_OF_DISCONTINUANCE.name());
 
@@ -182,25 +247,28 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
                                                              Address.fromContactInformation(getOrganisation()
                                                                                                 .get()
                                                                                                 .getContactInformation()
-                                                                                                .get(0)),
+                                                                                                .getFirst()),
                                                              "claimant",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN",
+                                                             false);
                 verify(formGenerator, times(1)).generateDocs(caseData,
                                                              "Signer 2 Name",
                                                              Address.fromContactInformation(getOrganisation()
                                                                                                 .get()
                                                                                                 .getContactInformation()
-                                                                                                .get(0)),
+                                                                                                .getFirst()),
                                                              "defendant1",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN",
+                                                             false);
                 verify(formGenerator, times(1)).generateDocs(caseData,
                                                              "Signer 3 Name",
                                                              Address.fromContactInformation(getOrganisation()
                                                                                                 .get()
                                                                                                 .getContactInformation()
-                                                                                                .get(0)),
+                                                                                                .getFirst()),
                                                              "defendant2",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN",
+                                                             false);
             }
 
             CaseData updatedData = mapper.convertValue(response.getData(), CaseData.class);
@@ -210,16 +278,17 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
 
         @Test
         void shouldGenerateNoticeOfDiscontinueDocForAllParties_whenNoCourtPermissionRequired_noNames_1vs2() {
-            when(formGenerator.generateDocs(any(CaseData.class), anyString(), any(Address.class), anyString(), anyString())).thenReturn(getCaseDocument());
+            when(formGenerator.generateDocs(any(CaseData.class), anyString(), any(Address.class), anyString(), anyString(), anyBoolean())).thenReturn(getCaseDocument());
             when(organisationService.findOrganisationById(anyString())).thenReturn(getOrganisationWithoutName());
 
-            CaseData caseData = CaseDataBuilder.builder().atStateNotificationAcknowledged().build().toBuilder()
-                .respondent1(getRespondent1PartyDetails())
-                .applicant1(getApplicant1PartyDetails())
-                .courtPermissionNeeded(SettleDiscontinueYesOrNoList.NO)
-                .typeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE)
-                .businessProcess(BusinessProcess.builder().processInstanceId(PROCESS_INSTANCE_ID).build())
-                .build();
+            CaseData caseData = CaseDataBuilder.builder().atStateNotificationAcknowledged().build();
+            caseData.setRespondent1(getRespondent1PartyDetails());
+            caseData.setApplicant1(getApplicant1PartyDetails());
+            caseData.setCourtPermissionNeeded(SettleDiscontinueYesOrNoList.NO);
+            caseData.setTypeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE);
+            BusinessProcess businessProcess = new BusinessProcess();
+            businessProcess.setProcessInstanceId(PROCESS_INSTANCE_ID);
+            caseData.setBusinessProcess(businessProcess);
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
             params.getRequest().setEventId(GEN_NOTICE_OF_DISCONTINUANCE.name());
 
@@ -231,17 +300,19 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
                                                              Address.fromContactInformation(getOrganisation()
                                                                                                 .get()
                                                                                                 .getContactInformation()
-                                                                                                .get(0)),
+                                                                                                .getFirst()),
                                                              "claimant",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN",
+                                                             false);
                 verify(formGenerator, times(1)).generateDocs(caseData,
                                                              "",
                                                              Address.fromContactInformation(getOrganisation()
                                                                                                 .get()
                                                                                                 .getContactInformation()
-                                                                                                .get(0)),
+                                                                                                .getFirst()),
                                                              "defendant",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN",
+                                                             false);
             }
 
             CaseData updatedData = mapper.convertValue(response.getData(), CaseData.class);
@@ -251,20 +322,21 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
 
         @Test
         void shouldGenerateNoticeOfDiscontinueDocForAllParties_whenNoCourtPermissionRequired_LrVsLiP_1vs2() {
-            when(formGenerator.generateDocs(any(CaseData.class), anyString(), any(Address.class), anyString(), anyString())).thenReturn(getCaseDocument());
+            when(formGenerator.generateDocs(any(CaseData.class), anyString(), any(Address.class), anyString(), anyString(), anyBoolean())).thenReturn(getCaseDocument());
             when(organisationService.findOrganisationById(anyString())).thenReturn(getOrganisationWithoutName());
 
-            CaseData caseData = CaseDataBuilder.builder().atStateNotificationAcknowledged().build().toBuilder()
-                .respondent1(getRespondent1PartyDetails())
-                .respondent2(getRespondent2PartyDetails())
-                .respondent1Represented(YesOrNo.NO)
-                .respondent2Represented(YesOrNo.NO)
-                .addRespondent2(YesOrNo.YES)
-                .applicant1(getApplicant1PartyDetails())
-                .courtPermissionNeeded(SettleDiscontinueYesOrNoList.NO)
-                .typeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE)
-                .businessProcess(BusinessProcess.builder().processInstanceId(PROCESS_INSTANCE_ID).build())
-                .build();
+            CaseData caseData = CaseDataBuilder.builder().atStateNotificationAcknowledged().build();
+            caseData.setRespondent1(getRespondent1PartyDetails());
+            caseData.setRespondent2(getRespondent2PartyDetails());
+            caseData.setRespondent1Represented(YesOrNo.NO);
+            caseData.setRespondent2Represented(YesOrNo.NO);
+            caseData.setAddRespondent2(YesOrNo.YES);
+            caseData.setApplicant1(getApplicant1PartyDetails());
+            caseData.setCourtPermissionNeeded(SettleDiscontinueYesOrNoList.NO);
+            caseData.setTypeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE);
+            BusinessProcess businessProcess = new BusinessProcess();
+            businessProcess.setProcessInstanceId(PROCESS_INSTANCE_ID);
+            caseData.setBusinessProcess(businessProcess);
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
             params.getRequest().setEventId(GEN_NOTICE_OF_DISCONTINUANCE.name());
 
@@ -276,19 +348,19 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
                                                              Address.fromContactInformation(getOrganisation()
                                                                                                 .get()
                                                                                                 .getContactInformation()
-                                                                                                .get(0)),
+                                                                                                .getFirst()),
                                                              "claimant",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN", false);
                 verify(formGenerator, times(1)).generateDocs(caseData,
                                                              getRespondent1PartyDetails().getPartyName(),
                                                              getRespondent1PartyDetails().getPrimaryAddress(),
                                                              "defendant1",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN", true);
                 verify(formGenerator, times(1)).generateDocs(caseData,
                                                              getRespondent2PartyDetails().getPartyName(),
                                                              getRespondent2PartyDetails().getPrimaryAddress(),
                                                              "defendant2",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN", true);
             }
 
             CaseData updatedData = mapper.convertValue(response.getData(), CaseData.class);
@@ -298,23 +370,26 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
 
         @Test
         void shouldGenerateNoticeOfDiscontinueDocForAllParties_whenNoCourtPermissionRequired_1vs2_serviceAddress() {
-            when(formGenerator.generateDocs(any(CaseData.class), anyString(), any(Address.class), anyString(), anyString())).thenReturn(getCaseDocument());
+            when(formGenerator.generateDocs(any(CaseData.class), anyString(), any(Address.class), anyString(), anyString(), anyBoolean())).thenReturn(getCaseDocument());
             when(organisationService.findOrganisationById(anyString())).thenReturn(getOrganisationWithoutName());
-            Address serviceAddress = Address.builder().addressLine1("Service").postCode("S3RV 1C3").build();
+            Address serviceAddress = new Address();
+            serviceAddress.setAddressLine1("Service");
+            serviceAddress.setPostCode("S3RV 1C3");
 
-            CaseData caseData = CaseDataBuilder.builder().atStateNotificationAcknowledged().build().toBuilder()
-                .respondent1(getRespondent1PartyDetails())
-                .respondent2(getRespondent2PartyDetails())
-                .addRespondent2(YesOrNo.YES)
-                .respondent2SameLegalRepresentative(YesOrNo.NO)
-                .respondentSolicitor1ServiceAddress(serviceAddress)
-                .applicantSolicitor1ServiceAddress(serviceAddress)
-                .respondentSolicitor2ServiceAddress(serviceAddress)
-                .applicant1(getApplicant1PartyDetails())
-                .courtPermissionNeeded(SettleDiscontinueYesOrNoList.NO)
-                .typeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE)
-                .businessProcess(BusinessProcess.builder().processInstanceId(PROCESS_INSTANCE_ID).build())
-                .build();
+            CaseData caseData = CaseDataBuilder.builder().atStateNotificationAcknowledged().build();
+            caseData.setRespondent1(getRespondent1PartyDetails());
+            caseData.setRespondent2(getRespondent2PartyDetails());
+            caseData.setAddRespondent2(YesOrNo.YES);
+            caseData.setRespondent2SameLegalRepresentative(YesOrNo.NO);
+            caseData.setRespondentSolicitor1ServiceAddress(serviceAddress);
+            caseData.setApplicantSolicitor1ServiceAddress(serviceAddress);
+            caseData.setRespondentSolicitor2ServiceAddress(serviceAddress);
+            caseData.setApplicant1(getApplicant1PartyDetails());
+            caseData.setCourtPermissionNeeded(SettleDiscontinueYesOrNoList.NO);
+            caseData.setTypeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE);
+            BusinessProcess businessProcess = new BusinessProcess();
+            businessProcess.setProcessInstanceId(PROCESS_INSTANCE_ID);
+            caseData.setBusinessProcess(businessProcess);
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
             params.getRequest().setEventId(GEN_NOTICE_OF_DISCONTINUANCE.name());
 
@@ -325,17 +400,17 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
                                                              "Signer Name",
                                                              serviceAddress,
                                                              "claimant",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN", false);
                 verify(formGenerator, times(1)).generateDocs(caseData,
                                                              "",
                                                              serviceAddress,
                                                              "defendant1",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN", false);
                 verify(formGenerator, times(1)).generateDocs(caseData,
                                                              "",
                                                              serviceAddress,
                                                              "defendant2",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN", false);
             }
 
             CaseData updatedData = mapper.convertValue(response.getData(), CaseData.class);
@@ -346,27 +421,31 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
         @Test
         void shouldGenerateNoticeOfDiscontinueDocForAllParties_whenNoCourtPermissionRequired_1vs2_correspondenceAddress() {
             when(featureToggleService.isWelshEnabledForMainCase()).thenReturn(false);
-            when(formGenerator.generateDocs(any(CaseData.class), anyString(), any(Address.class), anyString(), anyString())).thenReturn(getCaseDocument());
+            when(formGenerator.generateDocs(any(CaseData.class), anyString(), any(Address.class), anyString(), anyString(), anyBoolean())).thenReturn(getCaseDocument());
             when(organisationService.findOrganisationById(anyString())).thenReturn(getOrganisation());
-            Address serviceAddress = Address.builder().addressLine1("Service").postCode("S3RV 1C3").build();
-            Address correspondenceAddress =
-                Address.builder().addressLine1("Correspondence").postCode("C0RR 5P0N").build();
+            Address serviceAddress = new Address();
+            serviceAddress.setAddressLine1("Service");
+            serviceAddress.setPostCode("S3RV 1C3");
+            Address correspondenceAddress = new Address();
+            correspondenceAddress.setAddressLine1("Correspondence");
+            correspondenceAddress.setPostCode("C0RR 5P0N");
 
-            CaseData caseData = CaseDataBuilder.builder().atStateSpec1v2ClaimSubmitted().build().toBuilder()
-                .caseAccessCategory(CaseCategory.SPEC_CLAIM)
-                .respondent1(getRespondent1PartyDetails())
-                .respondent2SameLegalRepresentative(YesOrNo.NO)
-                .specApplicantCorrespondenceAddressdetails(correspondenceAddress)
-                .specRespondentCorrespondenceAddressdetails(correspondenceAddress)
-                .specRespondent2CorrespondenceAddressdetails(correspondenceAddress)
-                .respondent2(getRespondent2PartyDetails())
-                .respondentSolicitor1ServiceAddress(serviceAddress)
-                .applicantSolicitor1ServiceAddress(serviceAddress)
-                .applicant1(getApplicant1PartyDetails())
-                .courtPermissionNeeded(SettleDiscontinueYesOrNoList.NO)
-                .typeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE)
-                .businessProcess(BusinessProcess.builder().processInstanceId(PROCESS_INSTANCE_ID).build())
-                .build();
+            CaseData caseData = CaseDataBuilder.builder().atStateSpec1v2ClaimSubmitted().build();
+            caseData.setCaseAccessCategory(CaseCategory.SPEC_CLAIM);
+            caseData.setRespondent1(getRespondent1PartyDetails());
+            caseData.setRespondent2SameLegalRepresentative(YesOrNo.NO);
+            caseData.setSpecApplicantCorrespondenceAddressdetails(correspondenceAddress);
+            caseData.setSpecRespondentCorrespondenceAddressdetails(correspondenceAddress);
+            caseData.setSpecRespondent2CorrespondenceAddressdetails(correspondenceAddress);
+            caseData.setRespondent2(getRespondent2PartyDetails());
+            caseData.setRespondentSolicitor1ServiceAddress(serviceAddress);
+            caseData.setApplicantSolicitor1ServiceAddress(serviceAddress);
+            caseData.setApplicant1(getApplicant1PartyDetails());
+            caseData.setCourtPermissionNeeded(SettleDiscontinueYesOrNoList.NO);
+            caseData.setTypeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE);
+            BusinessProcess businessProcess = new BusinessProcess();
+            businessProcess.setProcessInstanceId(PROCESS_INSTANCE_ID);
+            caseData.setBusinessProcess(businessProcess);
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
             params.getRequest().setEventId(GEN_NOTICE_OF_DISCONTINUANCE.name());
 
@@ -377,17 +456,17 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
                                                              "Organisation name",
                                                              correspondenceAddress,
                                                              "claimant",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN", false);
                 verify(formGenerator, times(1)).generateDocs(caseData,
                                                              "Organisation name",
                                                              correspondenceAddress,
                                                              "defendant1",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN", false);
                 verify(formGenerator, times(1)).generateDocs(caseData,
                                                              "Organisation name",
                                                              correspondenceAddress,
                                                              "defendant2",
-                                                             "BEARER_TOKEN");
+                                                             "BEARER_TOKEN", false);
             }
 
             CaseData updatedData = mapper.convertValue(response.getData(), CaseData.class);
@@ -401,19 +480,22 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
         when(featureToggleService.isWelshEnabledForMainCase()).thenReturn(true);
         when(formGenerator.generateDocs(
             any(CaseData.class),
-            anyString(), any(Address.class), anyString(), anyString()
+            anyString(), any(Address.class), anyString(), anyString(), anyBoolean()
         )).thenReturn(getCaseDocument());
-        CaseData caseData = CaseDataBuilder.builder().atStateNotificationAcknowledged().build().toBuilder()
-            .respondent1(getRespondent1PartyDetails())
-            .applicant1(getApplicant1PartyDetails())
-            .respondent1Represented(YesOrNo.NO)
-            .typeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE)
-            .courtPermissionNeeded(SettleDiscontinueYesOrNoList.NO)
-            .caseDataLiP(CaseDataLiP.builder()
-                             .respondent1LiPResponse(RespondentLiPResponse.builder().respondent1ResponseLanguage("BOTH")
-                                                         .build()).build())
-            .businessProcess(BusinessProcess.builder().processInstanceId(PROCESS_INSTANCE_ID).build())
-            .build();
+        CaseData caseData = CaseDataBuilder.builder().atStateNotificationAcknowledged().build();
+        caseData.setRespondent1(getRespondent1PartyDetails());
+        caseData.setApplicant1(getApplicant1PartyDetails());
+        caseData.setRespondent1Represented(YesOrNo.NO);
+        caseData.setTypeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE);
+        caseData.setCourtPermissionNeeded(SettleDiscontinueYesOrNoList.NO);
+        RespondentLiPResponse respondentLiPResponse = new RespondentLiPResponse();
+        respondentLiPResponse.setRespondent1ResponseLanguage("BOTH");
+        CaseDataLiP caseDataLiP = new CaseDataLiP();
+        caseDataLiP.setRespondent1LiPResponse(respondentLiPResponse);
+        caseData.setCaseDataLiP(caseDataLiP);
+        BusinessProcess businessProcess = new BusinessProcess();
+        businessProcess.setProcessInstanceId(PROCESS_INSTANCE_ID);
+        caseData.setBusinessProcess(businessProcess);
 
         CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
         params.getRequest().setEventId(GEN_NOTICE_OF_DISCONTINUANCE.name());
@@ -421,8 +503,38 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
         var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
         CaseData updatedData = mapper.convertValue(response.getData(), CaseData.class);
         List<Element<CaseDocument>> translatedDocuments = updatedData.getPreTranslationDocuments();
-        assertEquals(1, translatedDocuments.size());
-        assertEquals(PreTranslationDocumentType.NOTICE_OF_DISCONTINUANCE, updatedData.getPreTranslationDocumentType());
+        Assertions.assertEquals(1, translatedDocuments.size());
+        Assertions.assertEquals(PreTranslationDocumentType.NOTICE_OF_DISCONTINUANCE, updatedData.getPreTranslationDocumentType());
+    }
+
+    @Test
+    void shouldUpdateWelshEnabledCamundaVariable_whenWelshConditionsAreMet() {
+        when(featureToggleService.isWelshEnabledForMainCase()).thenReturn(true);
+        when(formGenerator.generateDocs(
+            any(CaseData.class),
+            anyString(), any(Address.class), anyString(), anyString(), anyBoolean()
+        )).thenReturn(getCaseDocument());
+        CaseData caseData = CaseDataBuilder.builder().atStateNotificationAcknowledged().build();
+        caseData.setRespondent1(getRespondent1PartyDetails());
+        caseData.setApplicant1(getApplicant1PartyDetails());
+        caseData.setRespondent1Represented(YesOrNo.NO);
+        caseData.setTypeOfDiscontinuance(DiscontinuanceTypeList.PART_DISCONTINUANCE);
+        caseData.setCourtPermissionNeeded(SettleDiscontinueYesOrNoList.NO);
+        RespondentLiPResponse respondentLiPResponse = new RespondentLiPResponse();
+        respondentLiPResponse.setRespondent1ResponseLanguage("BOTH");
+        CaseDataLiP caseDataLiP = new CaseDataLiP();
+        caseDataLiP.setRespondent1LiPResponse(respondentLiPResponse);
+        caseData.setCaseDataLiP(caseDataLiP);
+        BusinessProcess businessProcess = new BusinessProcess();
+        businessProcess.setProcessInstanceId(PROCESS_INSTANCE_ID);
+        caseData.setBusinessProcess(businessProcess);
+
+        CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
+        params.getRequest().setEventId(GEN_NOTICE_OF_DISCONTINUANCE.name());
+
+        handler.handle(params);
+
+        verify(runTimeService).setVariable(PROCESS_INSTANCE_ID, "WELSH_ENABLED", true);
     }
 
     @Test
@@ -438,57 +550,52 @@ class GenerateDiscontinueClaimCallbackHandlerTest extends BaseCallbackHandlerTes
     }
 
     private Party getRespondent1PartyDetails() {
-        return PartyBuilder.builder().individual().build().toBuilder()
-                .individualFirstName("John")
-                .individualLastName("Doe")
-                .build();
+        return new PartyBuilder().individual().build()
+                .setIndividualFirstName("John")
+                .setIndividualLastName("Doe");
     }
 
     private Party getRespondent2PartyDetails() {
-        return PartyBuilder.builder().individual().build().toBuilder()
-                .individualFirstName("Jane")
-                .individualLastName("Doe")
-                .build();
+        return new PartyBuilder().individual().build()
+                .setIndividualFirstName("Jane")
+                .setIndividualLastName("Doe");
     }
 
     private Party getApplicant1PartyDetails() {
-        return PartyBuilder.builder().individual().build().toBuilder()
-                .individualFirstName("Carl")
-                .individualLastName("Foster")
-                .build();
+        return new PartyBuilder().individual().build()
+                .setIndividualFirstName("Carl")
+                .setIndividualLastName("Foster");
     }
 
     private CaseDocument getCaseDocument() {
-        return CaseDocument.builder()
-                .createdBy("John")
-                .documentName("document name")
-                .documentSize(0L)
-                .documentType(NOTICE_OF_DISCONTINUANCE)
-                .createdDatetime(LocalDateTime.now())
-                .documentLink(Document.builder()
-                        .documentUrl("fake-url")
-                        .documentFileName("file-name")
-                        .documentBinaryUrl("binary-url")
-                        .build())
-                .build();
+        CaseDocument caseDocument = new CaseDocument();
+        caseDocument.setCreatedBy("John");
+        caseDocument.setDocumentName("document name");
+        caseDocument.setDocumentSize(0L);
+        caseDocument.setDocumentType(DIRECTIONS_QUESTIONNAIRE);
+        caseDocument.setCreatedDatetime(LocalDateTime.now());
+        Document documentLink = new Document();
+        documentLink.setDocumentUrl("fake-url");
+        documentLink.setDocumentFileName("file-name");
+        documentLink.setDocumentBinaryUrl("binary-url");
+        caseDocument.setDocumentLink(documentLink);
+        return  caseDocument;
     }
 
     private Optional<uk.gov.hmcts.reform.civil.prd.model.Organisation> getOrganisation() {
-        return Optional.of(uk.gov.hmcts.reform.civil.prd.model.Organisation.builder()
-                               .name("Organisation name")
-                               .contactInformation(List.of(ContactInformation.builder()
-                                                               .addressLine1("Address 1")
-                                                               .postCode("Post Code")
-                                                               .build()))
-                               .build());
+        return Optional.of(new uk.gov.hmcts.reform.civil.prd.model.Organisation()
+                               .setName("Organisation name")
+                               .setContactInformation(List.of(new ContactInformation()
+                                                               .setAddressLine1("Address 1")
+                                                               .setPostCode("Post Code")))
+                               );
     }
 
     private Optional<uk.gov.hmcts.reform.civil.prd.model.Organisation> getOrganisationWithoutName() {
-        return Optional.of(uk.gov.hmcts.reform.civil.prd.model.Organisation.builder()
-                               .contactInformation(List.of(ContactInformation.builder()
-                                                               .addressLine1("Address 1")
-                                                               .postCode("Post Code")
-                                                               .build()))
-                               .build());
+        return Optional.of(new uk.gov.hmcts.reform.civil.prd.model.Organisation()
+                               .setContactInformation(List.of(new ContactInformation()
+                                                               .setAddressLine1("Address 1")
+                                                               .setPostCode("Post Code")))
+                               );
     }
 }
